<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_menu">

    <TextView
        android:id="@+id/main_menuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/main_menuTitle"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addTestItemButton"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/add20ItemsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventoryStatusMenuButton" />

    <Button
        android:id="@+id/addItemsMenuButton"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="112dp"
        android:text="@string/addItemsbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clearInventoryButton"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/clearInventoryButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addItemsMenuButton" />

    <Button
        android:id="@+id/inventoryStatusMenuButton"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/inventoryStatusTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/addItemsMenuButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logoutFromMainMenu"
        android:layout_width="128dp"
        android:layout_height="116dp"
        android:layout_marginBottom="52dp"
        android:text="@string/logoutTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>