<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Item">

    <TextView
        android:id="@+id/addItemMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/additemMenuTitle"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/itemtext"
        app:layout_constraintBaseline_toBaselineOf="@+id/itemNameEditText"
        app:layout_constraintEnd_toStartOf="@+id/itemNameEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/quantityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/quantitytext"
        app:layout_constraintBaseline_toBaselineOf="@+id/itemQuantityEditText"
        app:layout_constraintEnd_toStartOf="@+id/itemQuantityEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/typetextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/typetext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityTextView" />

    <EditText
        android:id="@+id/itemNameEditText"
        android:layout_width="215dp"
        android:layout_height="51dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/itemQuantityEditText"
        android:layout_width="215dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemNameEditText" />

    <RadioGroup
        android:id="@+id/typeRadioGroup"
        android:layout_width="190dp"
        android:layout_height="184dp"
        android:layout_marginTop="128dp"
        android:baselineAligned="false"
        android:checkedButton="@id/biscuitRadio"
        android:clipToPadding="false"
        android:isScrollContainer="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addItemMenuTitle">

        <RadioButton
            android:id="@+id/biscuitRadio"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/biscuit" />

        <RadioButton
            android:id="@+id/cookieRadio"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/cookie"
            android:translationX="90dp"
            android:translationY="-47dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/cakeRadio"
            android:layout_width="75dp"
            android:layout_height="48dp"
            android:text="@string/cake"
            android:translationX="0dp"
            android:translationY="-62dp" />

        <RadioButton
            android:id="@+id/ingredientRadio"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/ingredient"
            android:translationX="90dp"
            android:translationY="-110dp" />

        <RadioButton
            android:id="@+id/otherRadio"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:text="@string/other"
            android:translationX="50dp"
            android:translationY="-120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RadioGroup>

    <Button
        android:id="@+id/addItemButton"
        android:layout_width="130dp"
        android:layout_height="78dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="90dp"
        android:text="@string/additemMenuTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/inventoryStatFromAddButton"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeRadioGroup" />

    <Button
        android:id="@+id/toMainMenuFromAddItem"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:layout_marginTop="368dp"
        android:text="@string/backToMainMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addItemMenuTitle" />

    <Button
        android:id="@+id/inventoryStatFromAddButton"
        android:layout_width="130dp"
        android:layout_height="78dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="90dp"
        android:text="@string/inventoryStatusTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeRadioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>