<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_View_Users">

    <TextView
        android:id="@+id/viewUsersTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/viewUsersTitle"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernamePasswordTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="96dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernamesPasswordsDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/usernamePasswordTextTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toEndOf="@+id/usernamePasswordTextTitle" />

    <Button
        android:id="@+id/mainMenuFromViewUsers"
        android:layout_width="163dp"
        android:layout_height="97dp"
        android:layout_marginBottom="32dp"
        android:text="@string/backToMainMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addUserFromViewUsers"
        android:layout_width="97dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="128dp"
        android:text="@string/addUsersButton"
        android:textColor="#3EEF45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/removeUsersFromViewUsers"
        android:layout_width="97dp"
        android:layout_height="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/removeUsersButton"
        android:textColor="#D53C3C"
        app:layout_constraintBaseline_toBaselineOf="@+id/addUserFromViewUsers"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>